feat(support default delimiters): 기본 구분자 지원 추가